--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
