--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.3.0",
     "framer-motion": "^11.3.21",
     "googleapis": "^140.0.1",
+    "lucide-react": "^0.441.0",
     "net": "^1.0.2",
     "next": "14.2.4",
     "react": "^18",
@@ -26,7 +29,8 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
