--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "HealthPulse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -31,7 +31,8 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "postcss": "^8",
