--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,16 @@
     "mongoose": "^8.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
-    "openai": "^4.61.0"
+    "openai": "^4.61.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongodb": "^4.0.6",
     "@types/mongoose": "^5.11.96",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "typescript": "^5.6.2"
   }
 }
